--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesAdmin/VehiclePageAdmin.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesAdmin/VehiclePageAdmin.xaml
@@ -6,9 +6,139 @@
       xmlns:local="clr-namespace:CarAccountingGibdd.Pages.PagesAdmin"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="VehiclePageAdmin">
+      
+      d:Width="1000" d:Height="450"
+      d:Background="{StaticResource Background.Window.Brush}"
+      xmlns:converters="clr-namespace:CarAccountingGibdd.Classes.Converters">
 
-    <Grid>
-        
-    </Grid>
+    <Page.Resources>
+
+        <!-- Кнопки для дата грид -->
+        <DataTemplate x:Key="Button.DataGrid">
+            <StackPanel Orientation="Horizontal">
+                <Button Style="{StaticResource Button.Icon.Small}"
+                        Tag="image"
+                        Click="ImageView_Click"
+                        Margin="0 0 12 0"
+                        ToolTip="Просмотреть фото"
+                        IsEnabled="{Binding PhotosVehicles.Count, 
+                        Converter={x:Static converters:CollectionToIsEnabledConverter.Instance}}"/>
+
+                <Button Style="{StaticResource Button.Icon.Small}"
+                        Tag="EditOutline"
+                        Click="Edit_Click"
+                        Margin="0 0 12 0"
+                        ToolTip="Отредактировать"/>
+
+                <Button Style="{StaticResource Button.Icon.Small}"
+                        Tag="LinkVariantOff"
+                        Click="DetachOwner_Click"
+                        ToolTip="Отвязать ТС от текущего владельца"
+                        Margin="0 0 12 0"
+                        IsEnabled="{Binding Owner, 
+                        Converter={x:Static converters:CollectionToIsEnabledConverter.Instance}}"/>
+
+                <Button Style="{StaticResource Button.Icon.Small}"
+                        Tag="DeleteOutline"
+                        Click="Delete_Click"
+                        ToolTip="Удалить"/>
+            </StackPanel>
+        </DataTemplate>
+    </Page.Resources>
+
+    <DockPanel>
+        <!-- Область параметров -->
+        <DockPanel DockPanel.Dock="Top"
+                   Margin="0 0 0 35"
+                   LastChildFill="False">
+
+            <Grid>
+                <TextBox Width="360"
+                         MinWidth="150"
+                         Name="searchTB"
+                         Tag="Поиск"
+                         MaxLength="70"
+                         ToolTip="Нажмите на значок поиска для обновления данных"/>
+
+                <Button Name="searchBTN"
+                        HorizontalAlignment="Right"
+                        Tag="Search"
+                        Style="{StaticResource Button.Icon.Transperent}"/>
+            </Grid>
+
+            <ComboBox Style="{StaticResource ComboBox.Filter}"
+                      Margin="10 0"
+                      Name="filterCB"
+                      Tag="Фильтр"/>
+
+            <ComboBox Style="{StaticResource ComboBox.Sorter}"
+                      Name="sorterCB"
+                      Tag="Сортировка"/>
+
+            <CheckBox Style="{StaticResource CheckBox.Ascending}"
+                      Margin="5 0 10 0"
+                      Name="ascendingCHB"/>
+
+            <Button Name="resetFiltersBTN"
+                    Style="{StaticResource Button.Icon.Medium}"
+                    Content="Очистить все"
+                    Tag="restore"
+                    ToolTip="Сброс фильтров"/>
+
+            <Button Style="{StaticResource Button.Primary.Icon}"
+                    DockPanel.Dock="Right"
+                    MinWidth="200"
+                    Content="Добавить"
+                    Tag="add"
+                    Click="Add_Click"/>
+
+        </DockPanel>
+
+        <!-- Область вывода информации -->
+        <Grid>
+
+            <!-- Контент -->
+            <Grid>
+                <!-- Контент -->
+                <DataGrid Name="itemsDG">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="ВИН" Binding="{Binding Vin}"/>
+                        <DataGridTextColumn Header="Номерной знак" Binding="{Binding LicensePlateValue, Mode=OneWay}"/>
+                        <DataGridTextColumn Header="Марка, модель" Binding="{Binding BrandModel, Mode=OneWay}"/>
+                        <DataGridTextColumn Header="Цвет" Binding="{Binding Color}"/>
+                        <DataGridTextColumn Header="Год выпуска" Binding="{Binding Year, StringFormat={}{0} г.}"/>
+                        <DataGridTextColumn Header="Тип" Binding="{Binding VehicleType.Name}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="MaxWidth" Value="130"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Б/У" Binding="{Binding UsedValueString}"/>
+                        <DataGridTextColumn Header="Паспорт владельца" Binding="{Binding OwnerPassport, Mode=OneWay}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="MaxWidth" Value="130"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTemplateColumn CellTemplate="{StaticResource Button.DataGrid}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+
+                <TextBlock Text="Данные о транспортных средствах отсутствуют"
+                          Style="{StaticResource TextBlock.H6}"
+                          FontSize="18"
+                          Margin="20 80 0 0"
+                          Visibility="{Binding Items.Count, ElementName=itemsDG, 
+                          Converter={x:Static converters:IntToVisibilityConverter.Instance } }"/>
+
+            </Grid>
+
+        </Grid>
+
+    </DockPanel>
+
 </Page>
