--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesInspector/ViolationsPageInspector.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesInspector/ViolationsPageInspector.xaml
@@ -30,13 +30,9 @@
                         Style="{StaticResource Button.Icon.Transperent}"/>
             </Grid>
 
-            <ComboBox Style="{StaticResource ComboBox.Filter}"
-                      Margin="10 0"
-                      Name="filterCB"
-                      Tag="Фильтр"/>
-
             <ComboBox Style="{StaticResource ComboBox.Sorter}"
                       Name="sorterCB"
+                      Margin="10 0 0 0"
                       Tag="Сортировка"/>
 
             <CheckBox Style="{StaticResource CheckBox.Ascending}"
