Все изменения в комментариях
- убрана оплата
+ добавлено новой зависимое свойство для текстбоксов (ограничение на вставку пробелов)
+ улучшена проверка почты

--- a/CarAccountingGibdd/CarAccountingGibdd/Components/AutoCompleteTextBox.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Components/AutoCompleteTextBox.xaml
@@ -37,6 +37,7 @@
 
                             <Trigger Property="IsChecked" Value="True">
                                 <Setter TargetName="arrowIcon" Property="Kind" Value="ChevronUp"/>
+                                <Setter TargetName="arrowIcon" Property="Foreground" Value="{StaticResource Text.Primary.Brush}"/>
                             </Trigger>
 
                             <Trigger Property="IsMouseOver" Value="True">
