--- a/CarAccountingGibdd/CarAccountingGibdd/Components/BindablePasswordBox.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Components/BindablePasswordBox.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <PasswordBox Name="passwordBox"
                      PasswordChanged="PasswordBox_PasswordChanged"
+                     PreviewKeyDown="PasswordBox_PreviewKeyDown"
                      GotFocus="PasswordBox_GotFocus"
                      LostFocus="PasswordBox_LostFocus"/>
 
