--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/ChangePasswordDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/ChangePasswordDialog.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:CarAccountingGibdd.Dialogs"
         mc:Ignorable="d"
        
+        xmlns:behaviors="clr-namespace:CarAccountingGibdd.Classes.Behaviors"
         xmlns:components="clr-namespace:CarAccountingGibdd.Components"
         
         Title="Смена пароля" 
@@ -32,6 +33,7 @@
             <TextBox Margin="0 0 0 12"
                      Tag="Электронная почта"
                      Name="emailTB"
+                     behaviors:NoSpacesTextBoxBehavior.DisallowSpaces="True"
                      DockPanel.Dock="Top"/>
 
             <Grid DockPanel.Dock="Top"
@@ -39,6 +41,7 @@
 
                 <TextBox Tag="Пароль"
                          Visibility="Hidden"
+                         behaviors:NoSpacesTextBoxBehavior.DisallowSpaces="True"
                          Name="PassTB"/>
 
                 <components:BindablePasswordBox Password="{Binding Password}"
