--- a/CarAccountingGibdd/CarAccountingGibdd/Controls/CertificateCard.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Controls/CertificateCard.xaml
@@ -66,8 +66,8 @@
                     <TextBlock DockPanel.Dock="Top"
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
-                    <Run Text="Статус:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding IsActiveName, Mode=OneWay}"
+                    <Run Text="Гос. номер:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="{Binding LicensePlate}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
