--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/AddCertificateDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/AddCertificateDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CarAccountingGibdd.Dialogs.AddSertificateDialog"
+﻿<Window x:Class="CarAccountingGibdd.Dialogs.AddCertificateDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -27,13 +27,15 @@
                        DockPanel.Dock="Top"
                        Margin="0 0 0 16"
                        TextWrapping="Wrap">
-                <Run Text="Присвоение свидетельства о регистрации ТС владельцу"/>
+                <Run Text="Присвоение свидетельства владельцу&#x0a;о регистрации транспортного средства"/>
             </TextBlock>
 
             <!-- Подзаголовок -->
             <TextBlock Style="{StaticResource TextBlock.Subtitle}"
                        Margin="0 0 0 24"
-                       Text="Проверьте данные и подтвердите выдачу свидетельства о регистрации ТС владельцу"
+                       MaxWidth="700"
+                       HorizontalAlignment="Left"
+                       Text="Проверьте данные и подтвердите выдачу свидетельства о регистрации ТС владельцу&#x0a;Также если у владельца имеется электронная почта, свидетельство будет на нее выслано"
                        Foreground="{StaticResource Text.Secondary.Brush}"
                        DockPanel.Dock="Top"/>
 
@@ -116,6 +118,14 @@
                     <TextBlock DockPanel.Dock="Top"
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
+                    <Run Text="Эл. почта:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="{Binding Inspection.Application.Owner.EmailValue, Mode=OneWay}"
+                         Style="{StaticResource Run.Description}"/>
+                    </TextBlock>
+                    
+                    <TextBlock DockPanel.Dock="Top"
+                               Margin="0 0 0 12"
+                               TextWrapping="Wrap">
                     <Run Text="Серия и номер паспорта:" Style="{StaticResource Run.Subtitle}"/>
                     <Run Text="{Binding Inspection.Application.Owner.Passport}"
                          Style="{StaticResource Run.Description}"/>
@@ -175,15 +185,16 @@
                        LastChildFill="False"
                        Width="300">
                 <Button Style="{StaticResource Button.Ordinary}"
-                    DockPanel.Dock="Bottom"
-                    Content="Выйти"
-                    Click="Exit_Click"/>
+                        DockPanel.Dock="Bottom"
+                        Content="Выйти"
+                        Click="Exit_Click"/>
 
-                <Button Style="{StaticResource Button.Primary}"
-                    DockPanel.Dock="Bottom"
-                    Content="Выдать свидетельство"
-                    Margin="0 0 0 12"
-                    Click="Add_Click"/>
+                <Button Style="{StaticResource Button.Primary.Icon}"
+                        Tag="FilePlusOutline"
+                        DockPanel.Dock="Bottom"
+                        Content="Сохранить"
+                        Margin="0 0 0 12"
+                        Click="Add_Click"/>
             </DockPanel>
 
         </DockPanel>
