--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/DialogsMessage/SendEmailMessageDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/DialogsMessage/SendEmailMessageDialog.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="CarAccountingGibdd.Dialogs.MessageLoadingDialog"
+﻿<Window x:Class="CarAccountingGibdd.Dialogs.DialogsMessage.SendEmailMessageDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CarAccountingGibdd.Dialogs"
+        xmlns:local="clr-namespace:CarAccountingGibdd.Dialogs.DialogsMessage"
         mc:Ignorable="d"
+        
         WindowStyle="None"
         MaxHeight="300" MaxWidth="500"
         MinHeight="300" MinWidth="500"
@@ -29,8 +30,7 @@
             <TextBlock Name="StatusLoadTB"
                        DockPanel.Dock="Top"
                        Style="{StaticResource TextBlock.H6}">
-                <Run Name="infoTB" Text="Формируем оплату..."/>
-                <Run Name="timerTB" Text="{Binding SecondsLeft, Mode=OneWay, StringFormat={}Осталось {0} сек.}"/>
+                <Run Name="infoTB" Text="Отправляем сообщение..."/>
             </TextBlock>
 
             <!-- Кнопка -->
